# OpenFirebase

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: .env.example  README.md  docker-compose.yml
app/backend/: Dockerfile  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial.py  0002_scan_options_logs.py  0003_scanner_role_grants.py  0004_scan_bundles.py
app/backend/src/openfirebase_web/: config.py  db.py  main.py
app/backend/src/openfirebase_web/auth/: models.py  router.py  users.py
app/backend/src/openfirebase_web/ingest/: importer.py
app/backend/src/openfirebase_web/scanner/: items_parser.py  runner.py
app/backend/src/openfirebase_web/scans/: models.py  pubsub.py  repository.py  router.py  schemas.py  secrets.py  service.py
app/backend/src/openfirebase_web/storage/: minio_client.py  router.py
app/backend/src/openfirebase_web/worker/: main.py
app/caddy/: Caddyfile
app/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
app/frontend/src/: main.tsx
app/frontend/src/components/layout/: AppShell.tsx  AuthShell.tsx
app/frontend/src/components/ui/: Button.tsx  ConfirmDialog.tsx  Input.tsx  Select.tsx  StatusPill.tsx  Surface.tsx  Tooltip.tsx  VerdictDot.tsx
app/frontend/src/features/auth/: AuthGuard.tsx  LoginPage.tsx  RegisterPage.tsx  api.ts  errors.ts
app/frontend/src/features/scans/: ManualScanPage.tsx  NewScanPage.tsx  ScanDetailPage.tsx  ScansListPage.tsx  UploadPage.tsx  api.ts  defaults.ts  hooks.ts
app/frontend/src/features/scans/components/: ExportDialog.tsx  ExtractedItems.tsx  FindingDetailDrawer.tsx  FindingsTable.tsx  LiveTerminal.tsx  OptionsForm.tsx  RescanDialog.tsx  ScanSettingsButton.tsx  StageTimeline.tsx  UploadDropzone.tsx
app/frontend/src/features/storage/: StoragePage.tsx  api.ts  hooks.ts
app/frontend/src/lib/: api.ts  types.ts  verdict.ts
app/frontend/src/routes/: router.tsx
app/frontend/src/styles/: globals.css
app/minio-init/: init.sh
app/minio-policies/: scanner-policy.json
app/postgres-init/: 01-create-scanner-role.sh
app/scanner/: Dockerfile
docs/schema/: README.md  openfirebase-scan.schema.json
openfirebase/: __init__.py  firebase_rules.json  main.py  utils.py
openfirebase/core/: __init__.py  auth.py  base.py  cli.py  config.py  orchestrator.py
openfirebase/extractors/: __init__.py  _patterns.py  dex_extractor.py  dns_parser.py  extractor.py  ipa_extractor.py  jadx_extractor.py  project_id_extractor.py  signature_extractor.py
openfirebase/handlers/: __init__.py  auth_data_handler.py  file_handler.py  multiprocessing_handler.py
openfirebase/output/: __init__.py  json_writer.py  verdict.py
openfirebase/parsers/: __init__.py  pattern_loader.py  results_parser.py
openfirebase/payloads/: openfirebase.json  openfirebase_storage_write_check.txt
openfirebase/scanners/: __init__.py  base.py  cloud_functions_scanner.py  config_scanner.py  database_scanner.py  firestore_scanner.py  storage_scanner.py  unified_scanner.py
openfirebase/tools/: parse_packages.py
openfirebase/wordlist/: firestore-collections-top-250.txt  firestore-collections.txt
tools/: parse_packages.py
