[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfirebase"
version = "1.3.0"
description = "Automated Firebase security scanner to scan realtime and firestore databases, storage buckets, remote configs and cloud functions for unauth read and write access"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Icex0"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "androguard @ git+https://github.com/Icex0/androguard.git@57e8c395ca8894a47baaaa0c4da449be09961df5",
    "tqdm>=4.64.0",
    "requests>=2.28.0",
    "typer[all]>=0.9.0",
    "importlib-resources>=1.3.0; python_version<'3.9'",
    "PyJWT>=2.0.0",
    "cryptography>=3.0",
]

[project.scripts]
openfirebase = "openfirebase.main:main"

[project.urls]
Homepage = "https://github.com/Icex0/OpenFirebase"
Repository = "https://github.com/Icex0/OpenFirebase"
Issues = "https://github.com/Icex0/OpenFirebase/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfirebase*"]
exclude = ["tests*", "test*", "build*", "*.egg-info*"]

[tool.setuptools.package-data]
openfirebase = [
    "firebase_rules.json",
    "wordlist/*.txt", 
    "payloads/*.txt",
    "payloads/*.json",
    "tools/*"
]
